--- a/LocationReminder/app/build.gradle
+++ b/LocationReminder/app/build.gradle
@@ -133,6 +133,8 @@ dependencies {
     implementation "com.google.android.gms:play-services-maps:$playServicesVersionMaps"
 
     //Firebase Auth
-    implementation 'com.firebaseui:firebase-ui-auth:7.1.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
+    implementation platform('com.google.firebase:firebase-bom:30.5.0')
 
 }
