--- a/LocationReminder/app/build.gradle
+++ b/LocationReminder/app/build.gradle
@@ -61,8 +61,6 @@ dependencies {
 
     // Architecture Components
     //Navigation dependencies
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersion"
@@ -129,8 +127,17 @@ dependencies {
     implementation "com.google.android.gms:play-services-maps:$playServicesVersionMaps"
 
     //Firebase Auth
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
+
+    // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:30.5.0')
+
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Also add the dependency for the Google Play services library and specify its version
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
 
 }
