--- a/LocationReminder/app/build.gradle
+++ b/LocationReminder/app/build.gradle
@@ -10,7 +10,7 @@ android {
     //buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.udacity.reminder"
+        applicationId "com.udacity.project4"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
